# intellectuals-tree

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
scrapper/: classifications.py  intellectuals.py
